docs/0.19/_sources/api/gammapy.analysis.Analysis.rst.txt
Analysis
========

.. currentmodule:: gammapy.analysis

.. autoclass:: Analysis
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Analysis.config

   .. rubric:: Methods Summary

   .. autosummary::

      ~Analysis.get_datasets
      ~Analysis.get_excess_map
      ~Analysis.get_flux_points
      ~Analysis.get_light_curve
      ~Analysis.get_observations
      ~Analysis.read_models
      ~Analysis.run_fit
      ~Analysis.set_models
      ~Analysis.update_config

   .. rubric:: Attributes Documentation

   .. autoattribute:: config

   .. rubric:: Methods Documentation

   .. automethod:: get_datasets
   .. automethod:: get_excess_map
   .. automethod:: get_flux_points
   .. automethod:: get_light_curve
   .. automethod:: get_observations
   .. automethod:: read_models
   .. automethod:: run_fit
   .. automethod:: set_models
   .. automethod:: update_config
