docs/2.1rc1/_sources/api/gammapy.analysis.Analysis.rst.txt
Analysis
========

.. currentmodule:: gammapy.analysis

.. autoclass:: Analysis
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Analysis.config
      ~Analysis.models

   .. rubric:: Methods Summary

   .. autosummary::

      ~Analysis.get_datasets
      ~Analysis.get_excess_map
      ~Analysis.get_flux_points
      ~Analysis.get_light_curve
      ~Analysis.get_observations
      ~Analysis.read_datasets
      ~Analysis.read_models
      ~Analysis.run_fit
      ~Analysis.set_models
      ~Analysis.update_config
      ~Analysis.write_datasets
      ~Analysis.write_models

   .. rubric:: Attributes Documentation

   .. autoattribute:: config
   .. autoattribute:: models

   .. rubric:: Methods Documentation

   .. automethod:: get_datasets
   .. automethod:: get_excess_map
   .. automethod:: get_flux_points
   .. automethod:: get_light_curve
   .. automethod:: get_observations
   .. automethod:: read_datasets
   .. automethod:: read_models
   .. automethod:: run_fit
   .. automethod:: set_models
   .. automethod:: update_config
   .. automethod:: write_datasets
   .. automethod:: write_models
